Update with official Zenodo DOI and charter reference
- Add Zenodo DOI: 10.5281/zenodo.17573637
- Update GitHub repository URLs to studiofarzulla organization
- Add Farzulla Research charter reference (https://farzulla.org)
- Recompile PDF with updated metadata

This completes the v1.0 release with all official identifiers.

--- a/trauma-training-data-essay.tex
+++ b/trauma-training-data-essay.tex
@@ -741,6 +741,8 @@ This is the path from trauma as mysterious damage to development as optimization
 
 \section*{Acknowledgments}
 
+This research was conducted in accordance with the Charter of Farzulla Research, available at \url{https://farzulla.org}.
+
 I am deeply grateful to my mother and sister for their unwavering support throughout this research. I thank Anthropic for developing Claude Code, an exceptional AI tool that significantly accelerated the computational modeling and analysis phases of this work. I am indebted to the open source community whose software tools (PyTorch, NumPy, Matplotlib, and many others) made this research possible. Finally, I thank the many scholars whose work informed this framework - their insights into developmental psychology, machine learning, neuroscience, and cognitive science provided the intellectual foundation upon which this synthesis rests.
 
 \section*{Funding}
@@ -753,7 +755,7 @@ The author declares no conflict of interest.
 
 \section*{Data Availability Statement}
 
-All computational models, experimental code, generated figures, and numerical results are publicly available at: \url{https://github.com/Resurrexi/trauma-training-data}. The repository includes complete implementation details, hyperparameter configurations, and instructions for reproducing all results. Models are implemented in PyTorch 2.0+ and can be executed on standard CPU hardware.
+All computational models, experimental code, generated figures, and numerical results are publicly available at: \url{https://github.com/studiofarzulla/trauma-training-data}. The repository includes complete implementation details, hyperparameter configurations, and instructions for reproducing all results. Models are implemented in PyTorch 2.0+ and can be executed on standard CPU hardware. DOI: \url{https://doi.org/10.5281/zenodo.17573637}.
 
 \bibliographystyle{plain}
 \bibliography{trauma-training-data}
