--- a/trauma-training-data.bib
+++ b/trauma-training-data.bib
@@ -173,7 +173,7 @@
   doi = {10.1007/s10964-014-0114-y}
 }
 
-@article{talwar2011,
+@article{Talwar2011,
   author = {Talwar, Victoria and Lee, Kang},
   title = {A punitive environment fosters children's dishonesty: A natural experiment},
   journal = {Child Development},
